--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "",
   "devDependencies": {
     "@figma/plugin-typings": "^1.16.1",
+    "kuromoji": "^0.1.2",
     "typescript": "^4.0.2"
   },
   "dependencies": {}
