--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,6 @@
   "name": "Japanese Dummy Text",
   "id": "884977600755027488",
   "api": "1.0.0",
-  "main": "main.js",
-  "ui": "ui.html"
+  "main": "dist/main.js",
+  "ui": "dist/ui.html"
 }
