--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "japanese-dummy-text",
   "version": "1.0.0",
-  "description": "Japanese Dummy Text",
-  "main": "main.js",
+  "description": "Figma plugin Japanese dummy text",
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "dev": "tsc -w"
