$ npm i -D html-webpack-inline-source-plugin html-webpack-plugin style-loader css-loader @emotion/core

--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
   "author": "Kite",
   "license": "MIT",
   "devDependencies": {
+    "@emotion/core": "^10.0.35",
     "@figma/plugin-typings": "^1.16.1",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "css-loader": "^4.3.0",
+    "html-webpack-inline-source-plugin": "0.0.10",
+    "html-webpack-plugin": "^4.4.1",
     "kuromoji": "^0.1.2",
     "prettier": "^2.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "style-loader": "^1.2.1",
     "ts-loader": "^8.0.3",
     "typescript": "^4.0.2",
     "webpack": "^4.44.1",
