Make webpack work

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Figma plugin Japanese dummy text",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "dev": "tsc -w"
+    "dev": "tsc -w",
+    "test": "webpack --mode=development"
   },
   "author": "Kite",
   "license": "MIT",
