--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,9 @@
       "dom.iterable"
     ],
     "jsx": "react",
+    "strict": true,
+    "moduleResolution": "node",
+    "esModuleInterop": true,
     "typeRoots": [
       "./node_modules/@types",
       "./node_modules/@figma"
