--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "incremental": true,
     "target": "es6",
+    "module": "esnext",
     "lib": [
       "esnext",
       "dom",
