--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^16.9.8",
     "css-loader": "^4.3.0",
     "html-webpack-plugin": "^4.4.1",
+    "json-loader": "^0.5.7",
     "kuromoji": "^0.1.2",
     "prettier": "^2.1.2",
     "react": "^16.13.1",
