--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Figma plugin Japanese dummy text",
   "scripts": {
-    "kuromoji": "node src/kuromoji",
+    "kuromoji": "node src/kuromoji/kuromoji",
     "build": "npm run kuromoji && webpack --mode=production",
     "dev": "npm run kuromoji && webpack --mode=development && onchange \"src\" -- webpack --mode=development"
   },
