--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@emotion/core": "^10.0.35",
     "@figma/plugin-typings": "^1.16.1",
     "@types/kuromoji": "^0.1.0",
+    "@types/lodash": "^4.14.161",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "css-loader": "^4.3.0",
     "html-webpack-plugin": "^4.4.1",
     "kuromoji": "^0.1.2",
+    "lodash": "^4.17.20",
     "onchange": "^7.0.2",
     "prettier": "^2.1.2",
     "react": "^16.13.1",
